<resources>
    <string name="app_name">Evento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="fill_name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="title_activity_post">PostActivity</string>
</resources>
