<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/NonActionBarTheme"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/evento"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/lato_bold"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/login_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/lato_bold"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/login_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/lato_black"
            android:textSize="18sp"
            android:text="@string/login"
            android:background="@drawable/btn_main_custom"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/arrow_right"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/swipeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_left_for_register"
            android:textSize="15sp"
            android:fontFamily="@font/lato_bold"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center|bottom"/>

    </LinearLayout>

</LinearLayout>